<resources>
    <string name="app_name">WeatherApp</string>
    <string name="home_title">Weather</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_blank_fragment">Fav blank fragment</string>
    <string name="set_blank_fragment">Setting blank fragment</string>
    <string name="first_blank_fragment">first fragment</string>
    <string name="tvTemperatureTitle">Temperature :</string>
    <string name="tvHumidityValue">66%</string>
    <string name="tvHumidityTitle">Humidity :</string>
    <string name="tvWindValue">1.29 m/s</string>
    <string name="tvWindTitle">Wind :</string>
    <string name="tvLocationNameTitle">Location :</string>
    <string name="tvRainTitle">Rain Chance :</string>
    <string name="weather_info">Weather Info</string>


</resources>