<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainConstraintCity"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationViewCity"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:lottie_autoPlay="true"
            android:layout_centerInParent="false"
            app:lottie_loop="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvLocationNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLocationNameTitle"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_semibold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintTop_toBottomOf="@+id/animationViewCity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_5dp"
            />
        <TextView
            android:id="@+id/tvLocationNameValue"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:maxLength="25"
            android:ellipsize="marquee"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_28sp"
            app:layout_constraintTop_toTopOf="@+id/tvLocationNameTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvLocationNameTitle"
            app:layout_constraintStart_toEndOf="@+id/tvLocationNameTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_marginStart="@dimen/margin_5dp"
            />
        <TextView
            android:id="@+id/tvTemperatureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTemperatureTitle"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_semibold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationNameTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            />
        <TextView
            android:id="@+id/tvTemperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTemperatureTitle"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_28sp"
            app:layout_constraintTop_toTopOf="@+id/tvTemperatureTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvTemperatureTitle"
            app:layout_constraintStart_toEndOf="@+id/tvTemperatureTitle"
            android:layout_marginStart="@dimen/margin_5dp"
            />

        <TextView
            android:id="@+id/tvHumidityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvHumidityTitle"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_semibold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintTop_toBottomOf="@+id/tvTemperatureTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            />
        <TextView
            android:id="@+id/tvHumidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvHumidityValue"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_28sp"
            app:layout_constraintTop_toTopOf="@+id/tvHumidityTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvHumidityTitle"
            app:layout_constraintStart_toEndOf="@+id/tvHumidityTitle"
            android:layout_marginStart="@dimen/margin_5dp"
            />

        <TextView
            android:id="@+id/tvWindTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvWindTitle"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_semibold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintTop_toBottomOf="@+id/tvHumidityTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            />
        <TextView
            android:id="@+id/tvWindValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvWindValue"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_28sp"
            app:layout_constraintTop_toTopOf="@+id/tvWindTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvWindTitle"
            app:layout_constraintStart_toEndOf="@+id/tvWindTitle"
            android:layout_marginStart="@dimen/margin_5dp"

            />
        <TextView
            android:id="@+id/tvRainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRainTitle"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_semibold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintTop_toBottomOf="@+id/tvWindTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            />
        <TextView
            android:id="@+id/tvRainValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="start"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_28sp"
            app:layout_constraintTop_toTopOf="@+id/tvRainTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvRainTitle"
            app:layout_constraintStart_toEndOf="@+id/tvRainTitle"
            android:layout_marginStart="@dimen/margin_5dp"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>